# LegalRAG

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  exmaple_query_logging.txt  pyproject.toml  retrieve_eda.md  vercel.json
benchmark_50_reformated/: README.md
benchmark_50_reformated/mistral/: contractnli.json  cuad.json  privacy_qa.json
benchmark_50_reformated/qwen72b/: maud.json  privacy_qa.json
benchmark_50_reformated_proccessed/mistral/: contractnli.json  cuad.json  maud.json  privacy_qa.json
benchmark_50_reformated_proccessed/qwen72b/: contractnli.json  maud.json  privacy_qa.json
data/LegalBenchRAG/: sampled_queries.csv
eval-viewer/: index.html
eval-viewer/data/: gemini3flash__all-mpnet-base-v2.json  gemini3flash__legal-embed-bge-base-en-v1.5.json  gemini3flash__legalbert.json  gemini3flash__octen.json  gemini3flash__qwen3.json  models.json  original__all-mpnet-base-v2.json  original__legal-embed-bge-base-en-v1.5.json  original__legalbert.json  original__octen.json  original__qwen3.json  qwen35_9b__all-mpnet-base-v2.json  qwen35_9b__legal-embed-bge-base-en-v1.5.json  qwen35_9b__legalbert.json  qwen35_9b__octen.json  qwen35_9b__qwen3.json
evaluation/LegalBenchRAG/: README.md  eval_precision_recall.py  ingest.py  pipeline.py  query_rewrite.py  query_rewrite_gemini.py
legalrag/core/: config.py  interfaces.py  models.py
legalrag/ingestion/: chunker.py  embedder.py  indexer.py  loader.py  pipeline.py
legalrag/opensearch/: client.py  use_guide.md
legalrag/prompts/: loader.py  (+2 more)
notebooks/: chunk_hits_eda.ipynb  eval_trace_inspector.ipynb  inspect_chunk_spans.ipynb  isolate_benchmarks_50_corpus.ipynb  plot_eval_results.ipynb  sample_benchmarks.ipynb
scripts/: build_benchmark_50_reformated_processed.py  build_static.py  eval_viewer.py  ingest.py
(+51 files in other folders)
